--- a/src/member-list.scss
+++ b/src/member-list.scss
@@ -5,5 +5,10 @@
     .member__5d473:not(.wrapperPlated__91a9d) {
       background-color: var(--background-secondary);
     }
+
+    // Activity
+    .container__0f2e8 {
+      background-color: var(--background-secondary-alt);
+    }
   }
 }
