channel / chat fixes

--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -43,4 +43,9 @@
   .popout_8514, .popout__76f04 {
     background-color: var(--background-secondary-alt);
   }
+
+  // New undreads
+  .bar__7aaec {
+    background-color: var(--background-secondary);
+  }
 }
