--- a/src/chat.scss
+++ b/src/chat.scss
@@ -173,4 +173,8 @@
       background-color: var(--background-secondary-alt);
     }
   }
+
+  .jumpToPresentBar__0f481 {
+    background-color: var(--background-secondary-alt);
+  }
 }
