friendlist activity fix

--- a/src/friends.scss
+++ b/src/friends.scss
@@ -25,5 +25,10 @@
   // active now (right) section
   .itemCard__7e549 {
     background-color: var(--background-secondary-alt);
+
+    // Inner container
+    .section__00943 {
+      background-color: var(--background-primary);
+    }
   }
 }
