changing some colors

--- a/src/chat.scss
+++ b/src/chat.scss
@@ -127,11 +127,11 @@
     background-color: var(--background-secondary);
 
     .header__45690 {
-      background-color: var(--background-secondary-alt);
+      background-color: var(--background-tertiary);
     }
 
     .footer__45690 {
-      background-color: var(--background-secondary);
+      background-color: var(--background-secondary-alt);
     }
   }
 
@@ -140,7 +140,7 @@
     background-color: var(--background-secondary);
 
     .header_d9c882 {
-      background-color: var(--background-secondary-alt);
+      background-color: var(--background-tertiary);
     }
 
     // Thread
@@ -161,7 +161,7 @@
       background-color: var(--background-primary);
 
       .header_c656ac {
-        background-color: var(--background-secondary);
+        background-color: var(--background-primary);
       }
 
       .inspector_c0e32c {
