--- a/betterdiscord/main.css
+++ b/betterdiscord/main.css
@@ -111,6 +111,9 @@
 :root .popout_8514, :root .popout__76f04 {
   background-color: var(--background-secondary-alt);
 }
+:root .bar__7aaec {
+  background-color: var(--background-secondary);
+}
 
 :root .chatContent_f75fb0 {
   background-color: var(--background-primary);
@@ -190,6 +193,45 @@
 }
 :root .card_dc2e44.card__73069 {
   background-color: var(--background-secondary);
+}
+:root .messagesPopoutWrap__45690 {
+  background-color: var(--background-secondary);
+}
+:root .messagesPopoutWrap__45690 .header__45690 {
+  background-color: var(--background-secondary-alt);
+}
+:root .messagesPopoutWrap__45690 .footer__45690 {
+  background-color: var(--background-secondary);
+}
+:root .container_d9c882 {
+  background-color: var(--background-secondary);
+}
+:root .container_d9c882 .header_d9c882 {
+  background-color: var(--background-secondary-alt);
+}
+:root .container_d9c882 .container__6764b {
+  background-color: var(--background-primary);
+}
+:root #emoji-picker-tab-panel {
+  background-color: var(--background-primary);
+}
+:root #emoji-picker-tab-panel .header_c0e32c {
+  background-color: var(--background-secondary-alt);
+}
+:root #emoji-picker-tab-panel .emojiPicker_c0e32c {
+  background-color: var(--background-primary);
+}
+:root #emoji-picker-tab-panel .emojiPicker_c0e32c .header_c656ac {
+  background-color: var(--background-secondary);
+}
+:root #emoji-picker-tab-panel .emojiPicker_c0e32c .inspector_c0e32c {
+  background-color: var(--background-secondary-alt);
+}
+:root #emoji-picker-tab-panel .categoryList_c0e32c {
+  background-color: var(--background-secondary-alt);
+}
+:root .jumpToPresentBar__0f481 {
+  background-color: var(--background-secondary-alt);
 }
 
 :root .connectionIcon_c7f964[alt="Battle.net"],
@@ -361,12 +403,18 @@
 :root .itemCard__7e549 {
   background-color: var(--background-secondary-alt);
 }
+:root .itemCard__7e549 .section__00943 {
+  background-color: var(--background-primary);
+}
 
 :root .members_c8ffbb {
   background-color: var(--background-secondary);
 }
 :root .members_c8ffbb .member__5d473:not(.wrapperPlated__91a9d) {
   background-color: var(--background-secondary);
+}
+:root .members_c8ffbb .container__0f2e8 {
+  background-color: var(--background-secondary-alt);
 }
 
 :root .mask__68edb > mask {
@@ -430,11 +478,20 @@
 :root .chat_f75fb0 {
   background-color: var(--background-primary) !important;
 }
+:root .chat_f75fb0 .content_f75fb0,
 :root .chat_f75fb0 .pageBody__41ed7 {
   background-color: var(--background-primary) !important;
 }
+:root .chat_f75fb0 .content_f75fb0 .mainTableContainer__09a38,
+:root .chat_f75fb0 .pageBody__41ed7 .mainTableContainer__09a38 {
+  background-color: var(--background-secondary) !important;
+}
+:root .chat_f75fb0 .header__0b563 {
+  background-color: var(--background-secondary) !important;
+}
 :root .prompt__5d7c9,
-:root .channelRow_e4503a {
+:root .channelRow_e4503a,
+:root .row_d13feb {
   background-color: var(--background-secondary);
 }
 
