--- a/src/chat.scss
+++ b/src/chat.scss
@@ -121,4 +121,60 @@
   .card_dc2e44.card__73069 {
     background-color: var(--background-secondary);
   }
+
+  // Pinned messages
+  .messagesPopoutWrap__45690 {
+    background-color: var(--background-secondary);
+
+    .header__45690 {
+      background-color: var(--background-tertiary);
+    }
+
+    .footer__45690 {
+      background-color: var(--background-secondary-alt);
+    }
+  }
+
+  // Threads
+  .container_d9c882 {
+    background-color: var(--background-secondary);
+
+    .header_d9c882 {
+      background-color: var(--background-tertiary);
+    }
+
+    // Thread
+    .container__6764b {
+      background-color: var(--background-primary);
+    }
+  }
+
+  // React to post
+  #emoji-picker-tab-panel {
+    background-color: var(--background-primary);
+
+    .header_c0e32c {
+      background-color: var(--background-secondary-alt);
+    }
+
+    .emojiPicker_c0e32c {
+      background-color: var(--background-primary);
+
+      .header_c656ac {
+        background-color: var(--background-primary);
+      }
+
+      .inspector_c0e32c {
+        background-color: var(--background-secondary-alt);
+      }
+    }
+
+    .categoryList_c0e32c {
+      background-color: var(--background-secondary-alt);
+    }
+  }
+
+  .jumpToPresentBar__0f481 {
+    background-color: var(--background-secondary-alt);
+  }
 }
