--- a/user_vars.scss
+++ b/user_vars.scss
@@ -1,28 +1,43 @@
 // ignore this file
-// this justs lists vars in comfy.theme.css
+// this lists vars in comfy.theme.css at a glance
 
-:root {
-  --disable-animations: 2s channel-unread infinite;
-  --user-buttons-spacing: 8px;
-  --user-buttons-color: #096dc0;
-  --avatar-radius: 5px;
-  --status-radius: 3px;
-  --server-radius: 8px;
-  --colored-emoji: grayscale(0%);
-  --mention-color: #f04747;
-  --unread-color: #7289da;
-  --mention-color-bar: #c66262;
-  --mention-color-background: #c662621f;
-  --mention-color-hover: #c6626226;
-  --chat-buttons: #7289da;
-  --spotify-color: #1edc62 !important;
-  --online: #43b581;
-  --idle: #faa61a;
-  --dnd: #f04747;
-  --offline: #747f8d;
-  --streaming: #593695;
-  --playing: #7289da;
-  --listening: #1db653;
-  --role-circle: 5px;
-  --discord-logo: none;
-}
+$vars: (
+  //theme
+  comfy-primary: #23283d,
+  comfy-secondary: #1e2233,
+  comfy-secondary-alt: #191f2e,
+  comfy-tertiary: #101320,
+  comfy-accent: #6e85d3,
+
+  disable-animations: 2s channel-unread infinite,
+
+  //user area buttons
+  user-buttons-spacing: 8px,
+  user-buttons-color: #096dc0,
+
+  //roundness
+  avatar-radius: 5px,
+  status-radius: 3px,
+  server-radius: 8px,
+  role-radius: 5px,
+
+  //chat
+  mention-color: #f04747,
+  unread-color: #7289da,
+  unread-divider-color: #7289da,
+
+  //chatbar
+  chat-buttons: #7289da,
+  colored-emoji: grayscale(0%),
+  // chat
+  online: #43b581,
+  idle: #faa61a,
+  dnd: #f04747,
+  offline: #747f8d,
+  streaming: #593695,
+
+  playing: #7289da,
+  listening: #1db653,
+
+  discord-logo: none
+);
