--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -40,12 +40,16 @@
   }
 
   // forum hover
-  .popout_8514, .popout__76f04 {
+  .popout_8514,
+  .popout__76f04 {
     background-color: var(--background-secondary-alt);
   }
 
-  // New undreads
+  // New unreads
   .bar__7aaec {
-    background-color: var(--background-secondary);
+    background-color: var(--unread-color);
+  }
+  .mentionsBar__7aaec {
+    background-color: var(--mention-color);
   }
 }
