--- a/src/_.scss
+++ b/src/_.scss
@@ -49,4 +49,15 @@
   .vc-notification-root {
     background-color: var(--background-secondary);
   }
+
+  // mentions badge
+  .numberBadge__2b1f5 {
+    background-color: var(--mention-color) !important;
+    // animation: var(--disable-animations);
+  }
+
+  // text
+  .barText__7aaec {
+    color: white !important;
+  }
 }
