colored pinned message + colored bookmarks

--- a/src/chat.scss
+++ b/src/chat.scss
@@ -153,6 +153,19 @@
     .footer__45690 {
       background-color: var(--background-secondary-alt);
     }
+
+    .messageGroupWrapper__45690 {
+      background-color: var(--background-primary);
+    }
+  }
+
+  // bookmarks
+  .popoutContainer__4ad69 {
+    background-color: var(--background-secondary);
+
+    .header__45690 {
+      background-color: var(--background-tertiary);
+    }
   }
 
   // Threads
