--- a/src/member-list.scss
+++ b/src/member-list.scss
@@ -10,5 +10,9 @@
     .container__0f2e8 {
       background-color: var(--background-secondary-alt);
     }
+
+    .clanTag__5d473 {
+      background-color: var(--background-tertiary);
+    }
   }
 }
