--- a/src/server.scss
+++ b/src/server.scss
@@ -26,4 +26,17 @@
   {
     background-color: var(--background-secondary);
   }
+
+  // Mod view
+
+  .container__3a5a1 {
+    background-color: var(--background-primary);
+
+    .innerContainer__3a5a1 {
+      // Join Method invite code
+      .inviteContainer__23437 {
+        background-color: var(--background-secondary-alt);
+      }
+    }
+  }
 }
