mapped --background-surface-higher + colored default embed border color + recolored search results + colored app launcher search results

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -30,6 +30,7 @@
   --toast-contents: var(--background-primary) !important;
   --activity-card-background: var(--background-tertiary);
   --input-background: var(--background-secondary);
+  --background-surface-higher: var(--background-secondary) !important;
 }
 
 .theme-light {
