--- a/src/member-list.scss
+++ b/src/member-list.scss
@@ -12,7 +12,11 @@
     }
 
     .clanTag__5d473 {
-      background-color: var(--background-tertiary);
+      background-color: color-mix(
+        in srgb,
+        var(--background-primary),
+        #ffffff 10%
+      );
     }
   }
 }
