--- a/src/settings.scss
+++ b/src/settings.scss
@@ -19,4 +19,19 @@
   .headerV2__50a54 {
     background-color: var(--background-secondary-alt);
   }
+
+  // Toggles
+  .container__87bf1:not(.checked__87bf1) {
+    background-color: var(--background-secondary) !important;
+  }
+
+  #connections-tab,#authorized-apps-tab {
+    .container__87bf1:not(.checked__87bf1) {
+      background-color: var(--background-primary) !important;
+    }
+  }
+
+  .container__87bf1.checked__87bf1 {
+    background-color: var(--background-accent) !important;
+  }
 }
