--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -51,4 +51,31 @@
   .mentionsBar__7aaec {
     background-color: var(--mention-color);
   }
+
+  // DMs
+  .interactiveSelected__972a0 {
+    background: none;
+    background-color: var(--background-secondary-alt);
+  }
+
+  .interactiveSelected__972a0 {
+    background: none;
+    background-color: var(--background-secondary-alt);
+  }
+
+  .interactiveSelected__972a0:hover {
+    background-color: color-mix(
+      in srgb,
+      var(--background-secondary-alt) 10%,
+      var(--background-secondary)
+    );
+  }
+
+  .interactive__972a0:hover {
+    background-color: color-mix(
+      in srgb,
+      var(--background-secondary) 10%,
+      var(--background-primary)
+    );
+  }
 }
