--- a/src/server.scss
+++ b/src/server.scss
@@ -12,6 +12,15 @@
       .mainTableContainer__09a38 {
         background-color: var(--background-secondary) !important;
       }
+
+      // Choose Your Channels
+      .container_bc0d35 {
+        background-color: var(--background-secondary);
+
+        .image_bc0d35 {
+          content: url(https://code002lover.github.io/Discord-comfy/channel_picker.svg);
+        }
+      }
     }
 
     // Header of Channels & Roles
