recolor DM search bar

--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -79,6 +79,11 @@
     );
   }
 
+  // DM search bar
+  .searchBar__35e86 .button__201d5 {
+    background-color: var(--background-primary);
+  }
+
   // VC user limits info
   .channelInfo_c69b6d .wrapper__260e1 {
     background-color: var(--background-primary);
