--- a/src/channel-list.scss
+++ b/src/channel-list.scss
@@ -76,25 +76,28 @@
     }
   }
 
-  // DM search bar
+  // DM list search bar
   .searchBar__35e86 .button__201d5 {
     background-color: var(--background-primary);
   }
 
-  // VC user limits info
-  .channelInfo_c69b6d .wrapper__260e1 {
-    background-color: var(--background-primary);
-
-    .users__260e1 {
-      background-color: var(--background-secondary-alt);
-    }
-
-    .total__260e1 {
+  // channel
+  .containerDefault_c69b6d {
+    // VC user limits
+    .wrapper__260e1 {
       background-color: var(--background-primary);
-    }
 
-    .total__260e1:after {
-      border-right-color: var(--background-primary);
+      .users__260e1 {
+        background-color: var(--background-secondary-alt);
+      }
+
+      .total__260e1 {
+        background-color: var(--background-primary);
+      }
+
+      .total__260e1:after {
+        border-right-color: var(--background-primary);
+      }
     }
   }
 }
