--- a/betterdiscord/main.css
+++ b/betterdiscord/main.css
@@ -30,6 +30,7 @@
   --toast-contents: var(--background-primary) !important;
   --activity-card-background: var(--background-tertiary);
   --input-background: var(--background-secondary);
+  --background-surface-high: var(--background-secondary-alt);
   --background-surface-higher: var(--background-secondary) !important;
 }
 
@@ -123,6 +124,31 @@
 }
 :root .mentionsBar__7aaec {
   background-color: var(--mention-color);
+}
+:root .interactive__972a0:hover {
+  background-color: color-mix(in srgb, var(--background-secondary), white 5%);
+}
+:root .interactive__972a0.interactiveSelected__972a0 {
+  background: none;
+  background-color: var(--background-tertiary);
+}
+:root .interactive__972a0.interactiveSelected__972a0:hover {
+  background-color: color-mix(in srgb, var(--background-tertiary), white 10%);
+}
+:root .searchBar__35e86 .button__201d5 {
+  background-color: var(--background-primary);
+}
+:root .containerDefault_c69b6d .wrapper__260e1 {
+  background-color: var(--background-primary);
+}
+:root .containerDefault_c69b6d .wrapper__260e1 .users__260e1 {
+  background-color: var(--background-secondary-alt);
+}
+:root .containerDefault_c69b6d .wrapper__260e1 .total__260e1 {
+  background-color: var(--background-primary);
+}
+:root .containerDefault_c69b6d .wrapper__260e1 .total__260e1:after {
+  border-right-color: var(--background-primary);
 }
 
 :root .title_f75fb0,
@@ -586,6 +612,12 @@
 :root .headerV2__50a54 {
   background-color: var(--background-secondary-alt);
 }
+:root .container__87bf1 {
+  background-color: color-mix(in srgb, var(--background-primary), white 10%) !important;
+}
+:root .container__87bf1.checked__87bf1 {
+  background-color: var(--background-accent) !important;
+}
 
 :root .chat_f75fb0 {
   background-color: var(--background-primary) !important;
@@ -597,6 +629,10 @@
 :root .chat_f75fb0 .content_f75fb0 .mainTableContainer__09a38,
 :root .chat_f75fb0 .pageBody__41ed7 .mainTableContainer__09a38 {
   background-color: var(--background-secondary) !important;
+}
+:root .chat_f75fb0 .content_f75fb0 .container_bc0d35,
+:root .chat_f75fb0 .pageBody__41ed7 .container_bc0d35 {
+  background-color: var(--background-secondary);
 }
 :root .chat_f75fb0 .header__0b563 {
   background-color: var(--background-secondary) !important;
