--- a/src/server.scss
+++ b/src/server.scss
@@ -12,6 +12,11 @@
       .mainTableContainer__09a38 {
         background-color: var(--background-secondary) !important;
       }
+
+      // Choose Your Channels
+      .container_bc0d35 {
+        background-color: var(--background-secondary);
+      }
     }
 
     // Header of Channels & Roles
