--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -30,6 +30,9 @@
   --toast-contents: var(--background-primary) !important;
   --activity-card-background: var(--background-tertiary);
   --input-background: var(--background-secondary);
+
+  // Footer of files etc
+  --background-surface-high: var(--background-secondary-alt);
   --background-surface-higher: var(--background-secondary) !important;
 }
 
