fix new discord update

--- a/src/server-list.scss
+++ b/src/server-list.scss
@@ -1,7 +1,7 @@
 $serverListWidth: 72px;
 
 :root {
-  .guilds_c48ade {
+  .wrapper_ef3116.guilds_c48ade {
     background-color: var(--background-tertiary);
 
     .listItem__650eb {
