--- a/src/server.scss
+++ b/src/server.scss
@@ -1,7 +1,6 @@
 :root {
-  // community
-  .chat_f75fb0 //main pages
-  {
+  //community main page
+  .chat_f75fb0 {
     background-color: var(--background-primary) !important;
 
     //Channels & Roles / Server Guide + Browse Channels
